fixed buttons size on mobile

--- a/projects/28-clipboard-landing-page/css/style.css
+++ b/projects/28-clipboard-landing-page/css/style.css
@@ -56,6 +56,8 @@ a {
     padding: 1rem;
     border-radius: 2rem;
     color: white;
+    max-width: 400px;
+    margin: 0 auto;
 }
 .downios-btn {
     background-color: var(--p-strong-cyan);
